tests/Checker/everything/errors/19a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *19: attempt to reference a scalar/array as a function
Compilation was unsuccessful.
